CE-23063: code cleaning

--- a/projects/crud/src/lib/components/model-form/model-form.component.html
+++ b/projects/crud/src/lib/components/model-form/model-form.component.html
@@ -69,7 +69,7 @@
                                                 [reset]="submit" [config]="config2" [mode]="mode" [formGroup]="formGroup"
                                                 (elementDeleted)="elementDeleted($event)">
                                             </ng-crud-form-field>
-                                        </div> ***************
+                                        </div> 
                                     </ng-container>
                                     <ng-container *ngIf="config?.control?.subFields">
                                             <mat-divider class="divider"></mat-divider>
