Add option to add selector to iframe

--- a/projects/crud/src/lib/components/iframe-modal/iframe-modal.component.html
+++ b/projects/crud/src/lib/components/iframe-modal/iframe-modal.component.html
@@ -7,5 +7,5 @@
 </h2>
 <br />
 <mat-dialog-content>
-    <iframe [src]="src" frameborder="0"></iframe>
+    <iframe [src]="src" frameborder="0" id="{{data?.iframeId}}"></iframe>
 </mat-dialog-content>
