--- a/projects/crud/src/lib/components/model-form/model-form.component.scss
+++ b/projects/crud/src/lib/components/model-form/model-form.component.scss
@@ -166,7 +166,7 @@ mat-panel-title {
 
 .header_btn_container span {
     margin-right: 15px;
-    margin-left: auto;
+    margin-left: 5px;
     order: 2;
     color: #337ab7;
 }
