--- a/projects/crud/src/lib/components/listing/listing.component.html
+++ b/projects/crud/src/lib/components/listing/listing.component.html
@@ -154,7 +154,7 @@
             </ng-template>
         </ng-container>
         <mat-header-row *matHeaderRowDef="displayColumns"></mat-header-row>
-        <mat-row *matRowDef="let row; columns: displayColumns;" [ngClass]="{'clickable': mode === 'pick'}"
+        <mat-row *matRowDef="let row; columns: displayColumns;index as i" id="listing-row-{{i}}" [ngClass]="{'clickable': mode === 'pick'}"
             (click)="mode==='pick' && _picked(row)"></mat-row>
     </mat-table>
     <mat-paginator [ngStyle]="{'display': (initialLoading)?'none':'block'}" class="crud-paginator" #paginator
