--- a/projects/crud/src/lib/components/listing/listing.component.html
+++ b/projects/crud/src/lib/components/listing/listing.component.html
@@ -1,5 +1,5 @@
 <ng-container>
-    <div *ngIf="!userHasPermission">
+    <div *ngIf="!userHasPermission" data-cy="no-permission-label">
         {{"You don't have permissions to access this page!" | translate}}
     </div>
     <div [ngStyle]="{'display': (initialLoading || !userHasPermission)?'none':'block'}" class="row" *ngIf="!viewConfig.dialog_mode">
