--- a/projects/crud/src/lib/components/listing/listing.component.html
+++ b/projects/crud/src/lib/components/listing/listing.component.html
@@ -164,5 +164,6 @@
         *ngIf="viewConfig.pagination.enabled" [length]="resultsCount" [pageIndex]="pages-1" [pageSize]="20"
         (page)="onChange($event)">
     </mat-paginator>
-    <ng-listing-grid *ngIf="openGrid" [gridData]="viewConfig" (selectElementFromGrid)="selectElement($event)"></ng-listing-grid>
-</ng-container>
+    <ng-container *ngIf="openGrid">
+            <div #customGrid></div>
+    </ng-container>
