Desgin edits :edit designs, colors and themes of crud screens, fix spaces

--- a/projects/crud/src/lib/components/foreign-key-field/foreign-key-field.component.html
+++ b/projects/crud/src/lib/components/foreign-key-field/foreign-key-field.component.html
@@ -1,7 +1,7 @@
 <ng-container [formGroup]="formGroup">
     <mat-form-field>
         <mat-label>{{ config.label }}</mat-label>
-        <mat-icon class="input_icon" style="color: #1490C0;
+        <mat-icon class="input_icon" style="color: #2A55A2;
         cursor: pointer;
         position: absolute;
         bottom: 10px;
